Added first paragraph

--- a/Grimm's Fairy Tales 2021.10.01.1218.html
+++ b/Grimm's Fairy Tales 2021.10.01.1218.html
@@ -5,3 +5,7 @@
 
 <h1>Grimm's Fairy Tales</h1>
 <h2>Little Red Riding Hood</h2>
+<p>Once upon a time, there was a little girl named Red Riding Hood.
+    She Loved her grandmother very much. So, one day, she decided 
+    to go visit her sick granny. 
+</p>
